--- a/ProjectAkhir_Kelompok4/ProjectAkhir_Kelompok4/My Project/Resources.resx
+++ b/ProjectAkhir_Kelompok4/ProjectAkhir_Kelompok4/My Project/Resources.resx
@@ -133,6 +133,12 @@
   <data name="minimize15px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Bahan\control icon\minimize15px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="bgPageAdmin" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Bahan\bgPageAdmin.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="My project" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\My project.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="icons8-cancel-50" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icons8-cancel-50.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -205,7 +211,7 @@
   <data name="admin1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Bahan\content icon\admin.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="My project" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\My project.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="bgPageStaf" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Bahan\bgPageStaf.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
