--- a/ProjectAkhir_Kelompok4/ProjectAkhir_Kelompok4/Staf-LaporanPesan.resx
+++ b/ProjectAkhir_Kelompok4/ProjectAkhir_Kelompok4/Staf-LaporanPesan.resx
@@ -129,6 +129,9 @@
   <metadata name="StatusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>562, 56</value>
   </metadata>
+  <metadata name="Staf_LaporanPesanan5.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>214, 98</value>
+  </metadata>
   <metadata name="Staf_LaporanPesanan3.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>1080, 56</value>
   </metadata>
@@ -137,5 +140,8 @@
   </metadata>
   <metadata name="Staf_LaporanPesanan2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>764, 56</value>
+  </metadata>
+  <metadata name="Staf_LaporanPesanan4.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 98</value>
   </metadata>
 </root>
